syntax = "proto3";

package greet;

message Greeting{
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest{
	Greeting greeting = 1;
}

message GreetingResponse {
	string result = 1;
}

message GreetManyTimesRequest{
	Greeting greeting = 1;
}

message GreetManyTimesResponse{
	string result = 1;
}

message LongGreetRequest{
	Greeting greeting = 1;
}
message LongGreetResponse{
	string result=1;
}

message GreetEveryoneRequest{
	Greeting greeting = 1;
}

message GreetEveryoneResponse{
	string result =1;
}

message GreetDeadlineRequest{
	string name =1;
}
message GreetDeadlineResponse{
	string result =1;
}

service GreetingService {

	//Unary Call
	rpc Greet(GreetingRequest) returns (GreetingResponse) {
	}

	// Server Streaming Call
	rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){
	}

	// Client Streaming Call
	rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){
	}

	// Bi-directional streaming Call
	rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){}

	// Deadline Example
	rpc GreetWithDeadline(GreetDeadlineRequest) returns (GreetDeadlineResponse){};
}